		   CHANGES IN formatR VERSION 0.8

MAJOR CHANGES

  o tidy.source(text = character(0)) returns character(0) instead of ''

  o removed the (dark voodoo) functions parse.tidy() and deparse.tidy() as
  well as the operator "%InLiNe_IdEnTiFiEr%"; they were designed for the
  pgfSweave package, which has been archived on CRAN for a long time

		   CHANGES IN formatR VERSION 0.7

BUG FIXES

  o backslashes in whole lines of comments can be correctly retained
  now (e.g. #' \code{1+1}) (thanks, KAPLAN Bernard)

  o the font button in tidy.gui() works again (#23) (thanks, Dason
  Kurkiewicz)

  o the option left.brace.newline was buggy; it did not work for empty
  lines

MAJOR CHANGES

  o the option keep.space in tidy.source() was removed; the spaces
  before comments will not be faithfully kept

NEW FEATURES

  o the number of spaces for indentation can be specified in
  tidy.gui()

		   CHANGES IN formatR VERSION 0.6

NEW FEATURES

  o the replace.assign argument is much more reliable now; it is based
  on the codetools package (code analysis) instead of regular
  expressions (big thanks to Kohske Takahashi)

  o replace.assign also works when keep.comment=FALSE; in previous
  versions, replace.assign=TRUE only applies to keep.comment=TRUE

  o tidy.source() gained a new argument 'left.brace.newline'; when set
  to TRUE, the left curly brace { will be moved to a new line (#18)
  (thanks, Jared Lander)

MAJOR CHANGES

  o the 'text.tidy' component in the results of tidy.source() is a
  character vector of code blocks instead of code lines now, e.g. in
  previous versions, the result may be c('if (TRUE) {', '1', '}')
  (vector of length 3), but now it becomes 'if (TRUE) {\n1\n}'; each
  element of 'text.tidy' contains a minimal complete code block

  o potential dependency on the parser package has been removed
  (replaced by the codetools package); this also makes it more robust
  to use Unicode characters in R code now, see issue #13 for example
